cleaned up nft command